# Differentiable-Model-Scaling

./: README.md  pyproject.toml  test_dms.py
applications/efficientnet/: .gitignore  README.md  dms_efficientnet.py  requirements.txt  test.py  test_eff.py  timm_dataset.py  timm_pruning.py  timm_retrain.py
applications/efficientnet/scripts/DMS-450/: prune.sh  retrain.sh
dms/: __init__.py  dtopk_src.py
dms/modules/: algorithm.py  dtp.py  mutable.py  mutator.py  op.py  optimizer.py  scheduler.py  unit.py  utils.py
mmrazor/mmrazor/implementations/pruning/group_fisher/: hook.py  prune_sub_model.py
mmrazor/mmrazor/models/architectures/dynamic_ops/bricks/: dynamic_linear.py  dynamic_norm.py
mmrazor/mmrazor/models/mutables/mutable_channel/units/: l1_mutable_channel_unit.py  sequential_mutable_channel_unit.py
mmrazor/mmrazor/models/task_modules/tracer/: channel_analyzer.py
mmrazor/mmrazor/models/utils/expandable_utils/: __init__.py  unit.py
mmrazor/mmrazor/structures/graph/: channel_nodes.py
mmrazor/mmrazor/structures/subnet/: fix_subnet.py
mmrazor/mmrazor/utils/: runtime_info.py
